java version downgrade for railway